# comprauto-premium-care

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  quote.blade.php  service-order.blade.php
.github/workflows/: release.yml
icons/: icon.icns
scripts/: generate-icons.mjs
src/: index.css  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_add_sequential_numbers.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  customers.rs  expenses.rs  mod.rs  parts.rs  quotes.rs  service_orders.rs  stats.rs  vehicles.rs
src-tauri/src/models/: customer.rs  expense.rs  mod.rs  part.rs  part_vehicle.rs  quote.rs  service_order.rs  stats.rs  user.rs  vehicle.rs
src/components/layouts/: app-layout.tsx  auth-layout.tsx
src/components/print/: QuotePrint.tsx  ServiceOrderPrint.tsx  logo.ts
src/components/shared/: PrintPreviewModal.tsx  customer-selector.tsx  quick-part-modal.tsx  update-checker.tsx  vehicle-compatibility-list.tsx  vehicle-selector.tsx
src/components/ui/: alert-dialog.tsx  pagination.tsx  textarea.tsx
src/lib/: utils.ts
src/lib/api/: index.ts
src/pages/: dashboard.tsx
src/pages/auth/: login.tsx  register.tsx
src/pages/customers/: create.tsx  edit.tsx  index.tsx  show.tsx
src/pages/expenses/: create.tsx  edit.tsx  index.tsx  show.tsx
src/pages/parts/: create.tsx  edit.tsx  index.tsx
src/pages/quotes/: create.tsx  edit.tsx  index.tsx  show.tsx
src/pages/reports/: index.tsx
src/pages/service-orders/: create.tsx  edit.tsx  index.tsx  show.tsx
src/pages/vehicles/: create.tsx  edit.tsx  index.tsx
src/stores/: auth.ts
src/types/: index.ts
