[package]
name = "rech-performance-backoffice"
version = "0.1.0"
description = "Rech Performance - Sistema de Gestão para Oficinas"
authors = ["Rech Performance"]
edition = "2021"

[lib]
name = "rech_performance_backoffice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
thiserror = "1"

