[package]
name = "comprauto-premium-care"
version = "0.1.0"
description = "Comprauto Premium Care - Sistema de Gestão para Estética Automotiva"
authors = ["Comprauto Premium Care"]
edition = "2021"

[lib]
name = "comprauto_premium_care_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"
tauri-plugin-dialog = "2.6"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

reqwest = "0.12"
thiserror = "1"

